namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prisoner-from-nomis-migration-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-prisoner-from-nomis-migration-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "syscon_team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "syscon-alerts"
    cloud-platform.justice.gov.uk/application: "HMPPS Prisoner from NOMIS Migration"
    cloud-platform.justice.gov.uk/owner: "DPS Syscon Team"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prisoner-from-nomis-migration.git"
    cloud-platform.justice.gov.uk/team-name: "syscon-devs"
